<resources>
    <string name="app_name">手机谍报</string>
    <!--第一导航标题-->
    <string name="diebaoguan">谍报馆</string>
    <string name="fengshanbiao">风尚标</string>
    <string name="guangyinji">光影集</string>
    <string name="aimeifang">爱美坊</string>

    <!-- 四大模块 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="comments">跟帖</string>
    <string name="register_protocol"><u>注册协议</u></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="testEmail">qtdh3@163.com</string>
    <string name="testUserName">qtdh3</string>
    <string name="testPassword">123456</string>
    <string name="testUserName2">qq2208594696</string>
    <string name="testUserName3">qq220859</string>
    <string name="testEmail2">2208594696@qq.com</string>
    <string name="testEmail3">220859@qq.com</string>
    <string name="title_activity_article_details">ArticleDetailsActivity</string>
    <string name="articdetail">文章详情</string>
    <string name="pleasescanfword">请输入文字</string>
    <string name="send">发送</string>
    <string name="getdatafail">获取数据失败：</string>
    <string name="commentsuccess">发表评论成功</string>
    <string name="commentfail">评论失败！</string>
    <string name="JingPinOrigin">精品原创</string>
    <string name="alreadyatthebottom">已经到底了</string>
    <string name="collectedfailed">收藏（取消）失败</string>
    <string name="startexperience">开始体验</string>
    <string name="aimeizhi">爱美志</string>
    <string name="picdetail">图片详情</string>

    <!--menu-->
    <string name="aboutwe">关于我们</string>
    <string name="introduction">简介:</string>
    <string name="www_cnmo_com">网址:www.cnmo.com</string>
    <string name="introduction_content">谍报馆是手机中国推出的手机资讯客户端，为用户提供最快速 全面的手机新品谍报 新机评测 应用体验 几个促销等精彩内容。手机中国沉溺于2007年9月，
        是一资讯覆盖全国定位于专业与品位并重的新兴垂直手机网站，被认为是中国第一专业手机门户。手机中国立足于手机高端专业内容的建设，拥有20多个专业频道
        。100余个子频道。每天提供上百篇最细心呢最快的手机市场信息 新品曝光 新机评测 购买指导等专业原创内容</string>
    <string name="termsofservice">服务条款</string>
    <string name="termsofservice_content">
         1.修改\n
（1）"手机中国"有权随时修改"本协议"的任何条款。一旦"手机中国"修改了"本协议"的任何条款，"手机中国"会在网站上提供最新版本（包括其生效日期）的链接。"手机中国"鼓励用户定期浏览"本协议"。\n
（2）如果用户不接受对"本协议"所做的修改，用户可立即停止使用"手机中国"的网络服务。如果用户在"本协议"条款修改后继续使用"手机中国"的网络服务，则视为用户接受对"本协议"所做的修改。\n

2. 隐私权声明及其他特殊条款 \n
（1）依法保护用户隐私是"手机中国"的基本政策。包含如下内容：当用户浏览"手机中国"网站时，"手机中国"向用户收集哪些信息；"手机中国"将如何使用这些信息；"手机中国"会在何种情况下披露这些信息；以及用户的选择等。\n
（2）"手机中国"提供的某些特定服务可能还会适用其他特殊条款。"手机中国"会在用户使用相关特定服务时向用户提供或在相关页面发布这些特殊条款，请用户在使用相关特定服务前仔细阅读。用户使用相关特定服务的，将视为用户同意并接受这些特殊条款的约束。例如，用户通过手机中国网站注册帐号使用经销商的服务时，经销商的服务协议将会适用于用户在经销商的活动。如上述特殊条款与"本协议"的规定有任何冲突的，以特殊条款的规定为准。\n

3. 注册和登录控制\n
（1）用户注册时必须提供准确的注册信息，注册后如有变动应及时更新。用户注册成功后，"手机中国"将为该用户设置一个帐号，用户将可以设置相应的密码,并对在其账户和密码下发生的所有活动承担责任，除非有证据证明该活动与用户无关。用户不得以任何形式转让或授权他人使用自己的"手机中国"账户，也不应用他人账户在"手机中国"进行注册和购买商品。\n
建议用户 \n (1) 本人的密码或账号遭到未获授权的使用，或者发生其它任何安全问题时，将立即通知"手机中国"；\n(2)每次上网完毕都会把本人的账号关闭，使其处于"退出"状态。\n
（2）"手机中国"网站内的任何帐号均为"手机中国"的财产，用户完成注册后，仅取得相关帐号的使用权，用户仅可为个人及非商业的目的使用该帐号，不得将帐号转让、出租、赠与给任何第三方或继承。

4. 知识产权；许可\n
（1）"手机中国"提供的网络服务中包含的全部信息（包括但不限于任何文本、图片、音频及视频等）以及为提供服务而使用的任何软件等均受知识产权和其他相关法律保护。用户仅可以为个人和非商业目的使用"手机中国"的网络服务。除出于使用"手机中国"服务的目的外，未经"手机中国"事先书面同意，用户不得以任何方式复制、转发或以其他方式使用"手机中国"提供的网络服务中包含的任何信息。\n
（2）如果用户希望复制、转发或以其他方式使用"手机中国"网站的任何内容或作品的，请与手机中国联系：cnmo@cnmo.com 。\n
（3）"本协议"未授权用户使用"手机中国"的任何商标、服务标识和域名。\n

5. 法律投诉\n
（1）"手机中国"尊重用户的知识产权。\n
（2） 如果用户认为"手机中国"网站的任何内容或作品侵犯用户的著作权、商标权或其他合法权利的，请用户通过以下联系方式提出投诉并提供相关证据（包括用户的身份证明和用户对争议内容有合法所有权或授权的证明等），"手机中国"会尽快采取相应措施。"手机中国"的联系方式如下：cnmo@cnmo.com 。\n

6. 用户上载信息\n
（1）"手机中国"的部分服务会允许用户上载信息（包括但不限于任何文本、图片、音频及视频等）到"手机中国"网站。当用户上载这些信息时，用户同时不可撤销的授权"手机中国"永久免费使用这些信息，包括但不限于复制、修改、编辑、出版、翻译、传播、表演、展示以及创作衍生内容等。比如，"手机中国"可能将用户发表于本网站的内容授权给签订正式合作协议的合作伙伴转载，并注明用户昵称和来源于"手机中国"。用户保证对其上载的信息拥有合法的所有权或授权，并有权授予"手机中国"永久免费使用这些信息。"手机中国"尊重用户对上载信息的所有权。\n
（2）用户上载的信息不得带有诽谤性，也不得违反任何法律法规或侵犯任何第三方的合法权利。除非"手机中国"另行承诺或法律法规另有要求，"手机中国"没有义务监控用户上载信息，也不对用户上载信息引起的任何名誉或财产损失负责。\n
（3）如应政府部门的要求或"手机中国"发现用户涉嫌侵犯他人知识产权或其他合法权益时，"手机中国"有权向政府部门或权利人披露用户的全部登记信息及对"手机中国"网站的使用情况。\n

7. 第三方内容及广告\n
（1）"手机中国"网站有时会提供第三方内容或通往第三方网站的链接。"手机中国"并不审阅、评估或同意这些第三方内容或者链接。用户应对上述第三方内容或者链接自行加以判断，并承担因使用而引起的所有风险。"手机中国"不对这些第三方的内容或者链接做出任何保证或承担任何责任。\n
（2） 当用户访问 "手机中国"或给 "手机中国"发送电子邮件时，用户同意用电子方式与 "手机中国"进行联系，并同意以电子方式接受 "手机中国"的信息。用户可以选择接受或不接受 "手机中国"通过邮件和短信的形式，对 "手机中国"网站注册、购物用户发送订单信息、促销活动等信息。\n

8. 收费服务\n
（1）"手机中国"提供收费服务前，将提示用户，只有当用户根据提示，确认同意该项服务相关的购买和支付条款时，用户才能使用该项收费服务。如用户不同意相关的购买和支付条款，则"手机中国"有权不向用户提供该项收费服务。\n
（2）用户使用收费服务的，应按照该项服务相关的购买和支付条款履行支付义务。\n

9. 合法使用\n
（1）"手机中国"的网络服务是经过特定设计以特定版式和风格向用户提供相关内容。未经"手机中国"同意，请不要通过其他渠道和门户使用"手机中国"的内容和服务。用户使用"手机中国"的网络服务，必须遵守所有与服务有关的中华人民共和国法律和法规，不得通过"手机中国"的网络服务实施或帮助别人实施如下行为：\n
（a）违反法律法规或社会公共利益和公共道德的行为；\n
（b）侵犯"手机中国"合法利益的行为，包括但不限于发布未经"手机中国"许可的商业广告或信息公告；\n
（c）侵犯其他任何第三方的知识产权或其他任何合法权益；\n
（d）任何可能对"手机中国"互联网或移动网服务正常运转产生不利影响的行为；\n
（e）上载、发送或以其他方式传播包含病毒或其他危害计算机软、硬件设备正常工作的程序或资料；\n
（f）上载、发送或以其他方式传播任何诽谤性的、虚假的、辱骂性的、恐吓性的、淫秽的或其他任何非法的信息资料。\n
（2）"手机中国"有权对用户使用"手机中国"网络服务的情况进行实时审查和监督。如发现用户涉嫌在使用"手机中国"网络服务时违反任何上述规定的，"手机中国"有权对用户采取删除其信息、禁止用户发言、限制用户订购、注销用户账户等限制性措施。\n

10. 网站使用和帐号删除\n
（1）如果"手机中国"单方面认定用户违反"本协议"或者违反适用的法律法规，"手机中国"有权暂停用户的账号使用。"手机中国"不对用户因此遭受的损失承担任何责任。如果用户不同意本服务协议，用户应该立即停止使用"手机中国"的网络服务。
（2）用户理解，其为使用"手机中国"提供的网络服务而使用的任何设备（如电脑、手机）以及支付的任何费用（如税费、上网费、手机费）等，均由用户自行承担。

11. 违约赔偿\n
（1）如因"手机中国"违反有关法律、法规或"本协议"条款而给用户造成损失的，"手机中国"应承担赔偿责任。\n
（2）如因用户违反有关法律、法规、"本协议"项下的任何条款或任何对第三方的承诺，而给"手机中国"或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任，并确保"手机中国"不会因此遭受任何损失。\n

12. 免责声明；责任限制\n
手机中国及用户同意并特此确认：\n
（1）用户使用"手机中国"，"手机中国"对用户不承担任何责任，不对网络服务作任何形式的明示或默示的声明或担保。\n
（2） "手机中国"不保证服务及时、安全、准确及可靠。"手机中国"有权不经通知随时变更、中断或终止部分或全部的网络服务、删除用户的帐号，而无需对用户和任何第三人承担任何责任。涉及收费服务的，"手机中国"应当在变更、中断或终止之前事先通知用户，并根据用户实际使用服务的情况，将多收取的服务费退还给用户。但对于因不可抗力、"手机中国"不能控制的原因或本站正常的设备维修升级而造成的网络服务中断，"手机中国"不承担任何责任。\n

13. 使用法律；争议解决
（1）"本协议"的订立、执行、解释及争议解决均应适用中华人民共和国法律。\n
（2）与"本协议"有关的或因"本协议"引起的任何争议，双方应尽量通过友好协商解决；协商不成的，任何一方均有权向"本公司"注册地人民法院提起诉讼\n

14. 其他\n
（1） "手机中国"可能通过网页公告、电子邮件、手机短信或其他方式通知用户相关事项，比如"手机中国"服务的改变，"本协议"的修改或隐私权声明的修改等，请及时更新您的联系方式（尤其是电子邮件）。\n
（2）"手机中国"发出的任何通知及各类规则构成"本协议"的一部分，并视为于发送或在"手机中国"网站公布之日已送达收件人并生效。如用户在通知及各类规则发送或公布后继续使用"手机中国"服务的，视为用户同意该通知或规则的内容。如用户因任何原因没有阅读相关通知或规则的，"手机中国"不承担由此产生的任何后果。\n
（3）"本协议"构成双方对"本协议"之约定事项及其他有关事宜的完整协议，取代"手机中国"与用户之前就上述事项达成的其他协议。\n
（4）"本协议"中的任何条款无效的，"本协议"的其余条款仍应有效。\n
（5）"手机中国"未行使"本协议"的任何权利不构成对前述权利之放弃。 \n

</string>

    <string name="disclaimer">免责声明</string>
    <string name="havenot_login">未登录      </string>
    <string name="have_not_login_hint">登录之后就可以发表、回复跟帖了</string>
    <string name="cashe_size">清除缓存，当前缓存大小 0 MB</string>
    <string name="disclaimer_content"> 责任限制\n
手机中国及用户同意并特此确认：\n
（1）用户使用"手机中国"，"手机中国"对用户不承担任何责任，不对网络服务作任何形式的明示或默示的声明或担保。\n
（2） "手机中国"不保证服务及时、安全、准确及可靠。"手机中国"有权不经通知随时变更、中断或终止部分或全部的网络服务、删除用户的帐号，而无需对用户和任何第三人承担任何责任。涉及收费服务的，"手机中国"应当在变更、中断或终止之前事先通知用户，并根据用户实际使用服务的情况，将多收取的服务费退还给用户。但对于因不可抗力、"手机中国"不能控制的原因或本站正常的设备维修升级而造成的网络服务中断，"手机中国"不承担任何责任。\n
 </string>
    <string name="appversion">软件版本:</string>
    <string name="download">下载</string>
    <string name="spNmae">DieBaoGuan</string>
    <string name="updatetolast">是否升级到最新版本？</string>
    <string name="update">更新</string>
    <string name="feedback">意见反馈</string>
    <string name="contact">联系方式</string>
    <string name="feedback_hint">欢迎您提出宝贵的意见与建议，您的每个字都将用来改善我们的软件。</string>
    <string name="contact_hint">邮箱/QQ/手机号</string>
    <string name="submit">提交</string>
    <string name="pleaseinputrightinfor">请输入正确信息</string>
    <string name="datapostfail">数据发送失败</string>
    <string name="datapostsuccess">数据发送成功</string>

    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="isHaveSdcard">请先确认是否外部存储已经挂载</string>
    <string name="toclearthecache">确定清楚缓存吗？</string>
    <string name="clear">清除</string>
    <string name="cacle">取消</string>
    <string name="pleaseselectpushsetting">请先选择推送设置</string>
</resources>
