<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lin.diebaoguan.menu.FeedbackActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:background="@drawable/navi_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/feedback_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/feedback_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ll1"
        android:layout_below="@+id/ll1"
        android:text="@string/contact" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/navi_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/feedback_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@null"
            android:hint="@string/contact_hint"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ll2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_account_select"
        android:text="@string/submit" />

</RelativeLayout>
