<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/corner_list_bg">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/toclearthecache" />

        <TextView
            android:id="@+id/clear_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:text="@string/clear"
            android:textColor="@color/deepblue" />

        <TextView
            android:id="@+id/clear_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clear_sure"
            android:layout_alignBottom="@+id/clear_sure"
            android:layout_toStartOf="@+id/clear_sure"
            android:text="@string/cacle"
            android:textColor="@color/deepblue" />
    </RelativeLayout>
</RelativeLayout>